--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,4 @@
+
 .container{
     padding: 1em;
     max-width: 1000px;
@@ -9,36 +10,49 @@
 }
 
 .inner-container{
-    display: flex;
+    display:inline-flex;
     width: 100%;
     padding-top: 1em;
-    
 }
 
 .reg-form{
-    width: 70%;
+    width: 100%;
     padding: 1em;
-    padding-right: 5em;
+    padding-right: 10em;
 }
 .reg-form h1{
     font-family: Georgia, 'Times New Roman', Times, serif;
+    text-align: center;
 }
 .reg-grid h1{
-    font-family: mono
+    font-family: mono;
+    text-align: center;
+    color: rgba(0, 0, 0, 0.702);
+    
 }
 
 .reg-grid{
-    width: 50%;
+    /* overflow:hidden; */
+    width: 80%;
     padding: 1em;
+    margin-left: 0.5em;
     padding-left: 1em;
+    border: 0.5px solid rgb(0, 0, 0);
+    background-color: aliceblue;
 }
 
 .form-group{
     margin-bottom: 1em;
 }
+.form-group select{
+    width:100%;
+    height: 45px;
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 10px;
+}
 .form-group .savebtn{
     font-size: 20px;
-background-color: rgb(37, 189, 23);
+background-color: rgb(88, 187, 79);
 cursor: pointer;
 }
 
@@ -51,8 +65,9 @@ cursor: pointer;
   transform: translateY(1.5px);
 }
 .form-group .resetbtn{
+    margin-left: 1em;
     font-size: 20px;
-    background-color: rgb(189, 170, 23);
+    background-color: rgb(190, 176, 76);
 }
 .form-group .resetbtn:hover{
     background-color:rgb(218, 205, 114);
@@ -72,6 +87,8 @@ cursor: pointer;
 .inner-container .spacertbl{
     border-collapse:separate;
     border-spacing:0px 15px;
+    color: rgba(0, 0, 0, 0.702);
+    padding-right: 5px;
 }
 .inner-container .brdrhide{
     border-right: hidden;
@@ -88,7 +105,7 @@ cursor: pointer;
     display: block;
     margin-bottom: 0.5em;
     font-weight: bold;
-    font-style: italic;
+    font-size: large;
 }
 .form-group input{
     width: 100%;
@@ -116,8 +133,10 @@ cursor: pointer;
     border-radius: 2px;
 }
 .reg-row{
-    width: 100px;
+    width: 100%;
     display: flex;
+    flex-wrap: wrap;
+    /* flex-direction: column; */
     margin-bottom: 0.2em;
 }
 .reg-row-details{
@@ -137,6 +156,7 @@ cursor: pointer;
     padding-left: 1em;
     justify-content: center;
     align-items: center;
+    
 
 }
 .reg-grid .reg-row-action a{
@@ -153,10 +173,13 @@ cursor: pointer;
 .inner-container .reg-grid div > a{
     display: block;
     cursor: pointer;
-    padding: 1em;
     background-color: rgba(255, 116, 116, 0.719);
     color:rgb(0, 0, 0);
-    border-radius: 10px;
+    border-radius: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    width: 5px;
+    padding-left: 6px;
 }
 .container .inner-container .reg-grid div > a:hover{
     background-color: rgba(230, 162, 162, 0.719);
