--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+    background: #22394a;
+    color: rgb(217, 217, 217);
+}/* You can add global styles to this file, and also import other style files */
